<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@drawable/bg_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            style="@style/toolbar_icon"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/toolbar_text"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/add_bmi_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/text_large"
        android:layout_marginTop="64dp"
        android:text="@string/enter_personal_detail"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name"
        style="@style/default_edittext"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/desc"
        style="@style/text_grey_18"
        android:text="@string/desc"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_weight"
        style="@style/text_dark_grey_16"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/weight"
        app:layout_constraintEnd_toStartOf="@id/tv_height"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_height"
        style="@style/text_dark_grey_16"
        android:text="@string/height"
        app:layout_constraintEnd_toStartOf="@id/tv_gender"
        app:layout_constraintStart_toEndOf="@id/tv_weight"
        app:layout_constraintTop_toTopOf="@id/tv_weight" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_gender"
        style="@style/text_dark_grey_16"
        android:layout_marginEnd="40dp"
        android:text="@string/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_height"
        app:layout_constraintTop_toTopOf="@id/tv_weight" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pickers_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:elevation="2dp"
        android:paddingHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@id/tv_weight">

        <NumberPicker
            android:id="@+id/picker_weight"
            style="@style/picker"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/picker_height"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/picker_height"
            style="@style/picker"
            app:layout_constraintLeft_toRightOf="@id/picker_weight"
            app:layout_constraintRight_toLeftOf="@id/picker_gender"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/picker_gender"
            style="@style/picker"
            app:layout_constraintLeft_toRightOf="@id/picker_height"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go"
        style="@style/button"
        android:layout_marginTop="24dp"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/pickers_layout"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>