<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.result.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@drawable/bg_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            style="@style/toolbar_icon"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/toolbar_text"
            android:text="@string/bmi_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="132dp"
        android:background="@drawable/bg_gradient_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/ralewaysemi_bold"
            android:gravity="center"
            android:text="@string/body_mass_index"
            android:textColor="@color/dim"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:background="@color/dim"
            app:layout_constraintBottom_toTopOf="@id/title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/dim"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/score_whole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="100sp"
            app:layout_constraintEnd_toStartOf="@id/score_fraction"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="18" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/score_fraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@id/score_whole"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/score_whole"
            tools:text=". 61" />

        <View
            android:id="@+id/underline"
            android:layout_width="0dp"
            android:layout_height="1.5dp"
            android:layout_marginTop="-5dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="@id/score_fraction"
            app:layout_constraintStart_toStartOf="@id/score_whole"
            app:layout_constraintTop_toBottomOf="@id/score_fraction" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:letterSpacing="0.07"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/underline"
            tools:ignore="SmallSp"
            tools:text="HELLO OLIVIA , YOU ARE NORMAL" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/raleway_regular"
            android:gravity="center"
            android:letterSpacing="0.07"
            android:text="@string/normal_bmi"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/result"
            tools:ignore="SmallSp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/desc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway_regular"
            android:gravity="center"
            android:letterSpacing="0.07"
            android:text="@string/index"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/desc1"
            tools:ignore="SmallSp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/share"
            style="@style/style_share"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rate"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/share_ic"
                style="@style/style_share_ic"
                android:src="@drawable/share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/share_tv"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/share_tv"
                style="@style/style_share_tv"
                android:text="@string/share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/share_ic"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rate"
            style="@style/style_share"
            app:layout_constraintBottom_toBottomOf="@id/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/share">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/rate_ic"
                style="@style/style_share_ic"
                android:src="@drawable/star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/rate_tv"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/rate_tv"
                style="@style/style_share_tv"
                android:text="@string/rate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rate_ic"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/native_ad_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
